# deep-research-agent

./: README.md  check_leakage.sh  pyproject.toml
deep_research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docker/: README.md  agent.Dockerfile  config_template.yaml  docker-compose.yml  searxng.yml
src/: config_template.yaml  prompts.py
src/tools/: fs.py  web.py
src/utils/: parsers.py
