[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-agent"
version = "0.1.0"
description = "A deep research agent with hierarchical delegation: Orchestrator → Searcher → Analyzer."
authors = [{name = "Local Agent Builder"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework",
    "python-dotenv",
    "httpx[socks]",
    "textual",
    "beautifulsoup4",
    "PyYAML",
    "pyfiglet",
    "ddgs",
    "markitdown[all]",
    "socksio",
    "textual-serve",
]

[project.scripts]
deep-research-agent = "src.app:cli_main"

[tool.setuptools]
packages = [
    "src",
    "src.tools",
    "src.engine",
    "src.utils"
]
